[package]
name = "csvstar"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.30"
csv = "1.3.1"

[[bin]]
name = "csvcut"
path="src/csvcut.rs"

#[[bin]]
#name = "csvformat"
#path="src/csvformat.rs"
#
#[[bin]]
#name = "csvgrep"
#path="src/csvgrep.rs"
#
#[[bin]]
#name = "csvsql"
#path="src/csvsql.rs"
#
#[[bin]]
#name = "csvstat"
#path="src/csvstat.rs"
#
