[package]
name = "csvstar"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.30"
csv = "1.3.1"
multiset = "0.0.5"
priority-queue = "2.1.2"
serial_test = "3.2.0"


[dev-dependencies]
serial_test = "3.2.0"

[[bin]]
name = "csvcut"
path="src/csvcut.rs"

#[[bin]]
#name = "csvformat"
#path="src/csvformat.rs"
#
#[[bin]]
#name = "csvgrep"
#path="src/csvgrep.rs"
#
#[[bin]]
#name = "csvsql"
#path="src/csvsql.rs"
#
[[bin]]
name = "csvstat"
path="src/csvstat.rs"

